# AegisCore-Cyber-Risk-Intelligence-Platform

AegisCore Intelligence Platform/: $null  .dockerignore  .env.example  .env.local  .gitignore  .pre-commit-config.yaml  DEBUG_API_ERROR.md  FIX_API_STARTUP.md  FULL_RUN_GUIDE.md  QUICKSTART.md  RUN_INSTRUCTIONS.md  docker-compose.prod.yml  docker-compose.yml  fix-api.ps1  package-lock.json  pyproject.toml  start-vulnops.ps1  test-all-features.ps1
AegisCore Intelligence Platform/.github/: dependabot.yml
AegisCore Intelligence Platform/.github/workflows/: ci-cd.yml  integration.yml  security-scan.yml
AegisCore Intelligence Platform/backend/: .env.test  ARCHITECTURE.md  _uuid_probe.db  pyproject.toml  run_tests.ps1  test.db
AegisCore Intelligence Platform/backend/alembic/: env.py
AegisCore Intelligence Platform/backend/alembic/versions/: 0003_add_feature_indexes.py  0004_add_multi_tenant_foundation.py  0005_add_asset_dependency_graph.py  0006_add_remediation_tickets.py  0007_add_policy_feedback_jobs.py  0008_add_saas_identity_and_invitations.py  0009_add_tenant_id_to_remaining_tables.py  0010_add_email_verification.py  0011_add_upload_tables.py  0012_add_company_admin_and_audit_enhancements.py  0013_add_require_password_change.py  0014_add_actor_email_to_audit_log.py  20260411_0001_initial_schema.py  add_performance_indexes.py
AegisCore Intelligence Platform/backend/app/: __init__.py  exception_handlers.py  main.py
AegisCore Intelligence Platform/backend/app/api/: auth_deps.py  deps.py
AegisCore Intelligence Platform/backend/app/constants/: __init__.py
AegisCore Intelligence Platform/backend/app/core/: __init__.py  config.py  di_container.py  rbac.py  security.py  tenant.py
AegisCore Intelligence Platform/backend/app/db/: __init__.py  base.py  session.py
AegisCore Intelligence Platform/backend/app/middleware/: csrf_protection.py  login_rate_limit.py  rate_limit.py  request_id.py  security_headers.py
AegisCore Intelligence Platform/backend/app/ml/: prioritizer.py
AegisCore Intelligence Platform/backend/requirements/: base.in  base.txt  dev.in  ml.in
AegisCore Intelligence Platform/backend/tests/: conftest.py
AegisCore Intelligence Platform/data_pipeline/: requirements.txt
AegisCore Intelligence Platform/data_pipeline/ingestion/: csv_io.py
AegisCore Intelligence Platform/data_pipeline/jobs/: run_reporting_etl.py
AegisCore Intelligence Platform/data_pipeline/tests/: test_seed_csv_validation.py  test_validation_models.py
AegisCore Intelligence Platform/database/seeds/: business_units.csv  cve_records.csv  locations.csv  manifest.json  roles.csv  users.csv
AegisCore Intelligence Platform/database/views/: 001_vw_open_findings_by_bu.sql  002_vw_fact_latest_snapshot.sql
AegisCore Intelligence Platform/docker/: Dockerfile.api  Dockerfile.frontend
AegisCore Intelligence Platform/docker/nginx/: nginx.conf
AegisCore Intelligence Platform/docker/prometheus/: prometheus.yml
AegisCore Intelligence Platform/docker/scripts/: api-entrypoint.sh
AegisCore Intelligence Platform/docs/: ARCHITECTURE.md  AUTHENTICATION_UX.md  DATABASE_IMPLEMENTATION_SUMMARY.md  DATABASE_SCHEMA_DESIGN.md  OWNERSHIP_MODEL_AUDIT.md  OWNERSHIP_MODEL_FINAL.md  OWNER_DASHBOARD_UI.md  PLATFORM_OWNER_DB_AUDIT.md  PLATFORM_OWNER_SYSTEM.md  PROJECT_IMPROVEMENTS_SUMMARY.md  RBAC_IMPLEMENTATION_SUMMARY.md  SAAS_USER_JOURNEY.md  UPLOAD_SYSTEM_AUDIT.md  UPLOAD_SYSTEM_FINAL_AUDIT.md
AegisCore Intelligence Platform/docs/adr/: 0003-fastapi-jwt-rbac.md
AegisCore Intelligence Platform/docs/architecture/: system-architecture.md
AegisCore Intelligence Platform/docs/compliance/: DATABASE_ENCRYPTION.md  ENTERPRISE_SECURITY_SUMMARY.md  SOC2_READINESS.md
AegisCore Intelligence Platform/docs/deployment/: github-actions-deploy.md
AegisCore Intelligence Platform/docs/devops/: DOCKER_RUNTIME_VERIFICATION.md
AegisCore Intelligence Platform/docs/qa/: 100_PERCENT_PRODUCTION_READY.md  ADVANCED_FEATURES_FINAL_REPORT.md  ADVANCED_FEATURES_HARDENING.md
AegisCore Intelligence Platform/docs/runbooks/: pbi-refresh-failure.md
AegisCore Intelligence Platform/docs/security/: AUTH_MIGRATION_SUMMARY.md
AegisCore Intelligence Platform/frontend/: next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
AegisCore Intelligence Platform/frontend/tests/: api-errors.test.ts  auth-storage.test.ts  login.test.tsx
AegisCore Intelligence Platform/graphify-out/: GRAPH_REPORT.md
AegisCore Intelligence Platform/infra/k8s/: deployment-api.yaml  ingress.yaml
AegisCore Intelligence Platform/ml/: __init__.py  requirements.txt
AegisCore Intelligence Platform/ml/docs/: ASSUMPTIONS.md
AegisCore Intelligence Platform/ml/evaluation/: report.py
AegisCore Intelligence Platform/ml/features/: __init__.py  engineering.py
AegisCore Intelligence Platform/ml/tests/: test_engineering.py  test_train_smoke.py
AegisCore Intelligence Platform/ml/training/: train_prioritizer.py
AegisCore Intelligence Platform/monitoring/: prometheus.yml
AegisCore Intelligence Platform/powerbi/docs/: connection-parameters.md  dashboard-pages-spec.md  refresh-and-etl-contract.md  semantic-model-specification.md
AegisCore Intelligence Platform/powerbi/scripts/: verify_reporting_prereqs.sql
AegisCore Intelligence Platform/scripts/: compile_python_requirements.sh  generate_analysis_data.py  seed_oltp.py  smoke_api.ps1
(+403 files in other folders)
